# eolic

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pre-commit.yaml
docs/: api_reference.md  contributing.md  installation.md  introduction.md  license.md  readme.md  usage.md
eolic/: __init__.py  base.py  listener.py  model.py  remote.py  task_manager.py  utils.py
eolic/helpers/: __init__.py  coroutines.py  modules.py
eolic/integrations/: __init__.py  base.py  celery.py  fastapi.py
eolic/meta/: __init__.py  singleton.py
eventipy/: __init__.py  base.py  listener.py  model.py  remote.py
examples/: game_events_example.py
examples/integrations/celery_plugin/: celery_notification_service.py  celery_user_service.py  notification_service.py  readme.md  user_service.py
examples/integrations/fastapi_plugin/: notification_service.py  readme.md  user_service.py
tests/: __init__.py  common.py  test_dispatchers.py  test_eolic.py  test_eventipy.py  test_listener.py  test_remote.py
tests/integrations/: __init__.py  test_base.py  test_celery.py  test_fastapi.py
