[tool.poetry]
name = "eventipy"
version = "0.1.0"
description = ""
authors = ["Thiago Goslar <thiarthur1@gmail.com>"]
readme = "readme.md"
packages = [{ include = "eventipy" }]
license = "MIT"
homepage = "https://github.com/thiarthur/eventipy"
repository = "https://github.com/thiarthur/eventipy"
documentation = "https://github.com/thiarthur/eventipy/tree/master/docs"

[tool.poetry.dependencies]
python = "^3.1"
pydantic = "^2.8.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-order = "^1.2.1"
types-requests = "^2.32.0.20240622"
pre-commit = "^3.7.1"
pydocstyle = "^6.3.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["tests/"]

[tool.flake8]
max-line-length = 105

[tool.pydocstyle]
match = '((?!.run).)*\.py'

[tool.bandit]
exclude_dirs = ["tests/"]
