[tool.poetry]
name = "eolic"
version = "0.1.0"
description = ""
authors = ["Thiago Goslar <thiarthur1@gmail.com>"]
readme = "readme.md"
packages = [{ include = "eolic" }]
license = "MIT"
homepage = "https://github.com/thiarthur/eolic"
repository = "https://github.com/thiarthur/eolic"
documentation = "https://github.com/thiarthur/eolic/tree/master/docs"

[tool.poetry.dependencies]
python = "^3.9,<4.0"
pydantic = "^2.8.2"
requests = "^2.32.3"
fastapi = { version="*", optional= true }
uvicorn = { version="*", optional= true }

[tool.poetry.extras]
fastapi = ["fastapi", "uvicorn"]
all = ["fastapi", "uvicorn"]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
types-requests = "^2.32.0.20240622"
pre-commit = "^3.7.1"
pydocstyle = "^6.3.0"
flake8-pyproject = "^1.2.3"
commitizen = "^3.28.0"
httpx = "^0.27.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-order = "^1.2.1"
pytest-asyncio = "^0.23.8"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["tests/"]

[tool.flake8]
max-line-length = 105

[tool.pydocstyle]
match = '((?!.run).)*\.py'

[tool.bandit]
exclude_dirs = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"